# pyQuran

./: README.md  com.thinqrlab.pyQuran.json  meson.build  python3-requirements.json  requirements.txt
data/: com.thinqrlab.pyQuran.desktop.in  com.thinqrlab.pyQuran.gschema.xml  com.thinqrlab.pyQuran.metainfo.xml.in  com.thinqrlab.pyQuran.service.in  meson.build  pyquran.gresource.xml
data/icons/: meson.build
data/ui/: alert.ui  desktop-view.ui  mobile-view.ui  preferences.ui  sidebar-list.ui  sidebar-row.ui  window.ui
po/: POTFILES.in  meson.build
src/: main.py  meson.build  pyquran.in  window.py
src/helpers/: app_logic.py  downloader.py  font_attr.py  invert.py  page_info.py  quran_data.py
src/widgets/: alert.py  desktop_view.py  mobile_view.py  preferences.py  sidebar_list.py  sidebar_row.py  status_bar.py
